# imflame

./: .gitignore  AGENT.md  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  PERFORMANCE.md  PLAN.md  PROGRESS.md  README.md  SPEC.md
data/: sample.json
src/: data_loader.cpp  data_loader.h  flame_data.cpp  flame_data.h  flame_view.cpp  flame_view.h  main.cpp  timeline_view.cpp  timeline_view.h
tools/: gen_large_test.py  gen_test_data.py
